# python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_usage.py  basic_usage.py  crewai_example.py  langchain_example.py  mcp_proxy_example.py  openai_agents_example.py  pydantic_ai_example.py  webhook_handler.py
src/sidclaw/: __init__.py  _base_client.py  _client.py  _constants.py  _errors.py  _types.py  cost.py
src/sidclaw/mcp/: __init__.py  config.py  interceptor.py  server.py
src/sidclaw/middleware/: __init__.py  _base.py  claude_agent_sdk.py  composio.py  crewai.py  generic.py  google_adk.py  langchain.py  llamaindex.py  nemoclaw.py  openai_agents.py  pydantic_ai.py
src/sidclaw/webhooks/: __init__.py  verify.py
tests/: conftest.py  test_async_client.py  test_claude_agent_sdk_middleware.py  test_client.py  test_composio_middleware.py  test_cost.py  test_errors.py  test_google_adk_middleware.py  test_llamaindex_middleware.py  test_nemoclaw_middleware.py  test_types.py  test_webhooks.py
tests/test_mcp/: test_interceptor.py  test_server.py
tests/test_middleware/: test_crewai.py  test_generic.py  test_langchain.py  test_openai_agents.py  test_pydantic_ai.py
