[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidclaw"
version = "0.1.1"
description = "Python SDK for SidClaw — governance for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "SidClaw", email = "hello@sidclaw.com" }]
keywords = ["ai-agent", "governance", "identity", "approval", "mcp", "security", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.6.0,<3",
    "anyio>=4.0.0,<5",
    "typing-extensions>=4.10,<5",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.50.0"]
openai-agents = ["openai-agents>=0.1.0"]
pydantic-ai = ["pydantic-ai>=0.1.0"]
mcp = ["mcp>=1.0.0"]
all = [
    "langchain-core>=0.2.0",
    "crewai>=0.50.0",
    "openai-agents>=0.1.0",
    "pydantic-ai>=0.1.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://sidclaw.com"
Documentation = "https://docs.sidclaw.com"
Repository = "https://github.com/sidclawhq/python-sdk"
Changelog = "https://github.com/sidclawhq/python-sdk/blob/main/CHANGELOG.md"

[project.scripts]
sidclaw-mcp-proxy = "sidclaw.mcp:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/sidclaw"]

[tool.hatch.build.targets.sdist]
exclude = ["test_*.py", "tests/", ".venv/", ".pytest_cache/", "dist/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
